--- a/my-first-app-auto/.gitignore
+++ b/my-first-app-auto/.gitignore
@@ -1,15 +1,7 @@
-# Production
-build
-.serverless
-
-# Dependencies
+.DS_Store
 node_modules
-/.pnp
-.pnp.js
+/dist
 
-# Testing
-/tests/e2e/videos/
-/tests/e2e/screenshots/
 
 # local env files
 .env.local
@@ -29,6 +21,3 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
-
-node_modules
-.serverless
