--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "material-design-icons-iconfont": "^6.1.0",
     "serverless": "^2.35.0",
     "serverless-finch": "^2.6.0",
+    "serverless-single-page-app-plugin": "file:./serverless-single-page-app-plugin",
     "vue": "^2.6.11",
     "vue-i18n": "^8.24.2",
     "vue-router": "^3.2.0",
